* XXX XXX XX XXXX XX:XX:XX +0000 @email@ @version@-@release@%{?dist}
Release @version@-@release@ Start 08/08/2024 End XX/XX/XXXX
- 08/08/2024
1. svctool: fixed mariadb db creation for mariadb 11.x on archlinux

* Tue Aug 06 2024 12:51:02 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.8-1.1%{?dist}
Release @version@-@release@ Start 05/02/2024 End XX/XX/XXXX
======= Release Highlights ================================================
- Fixed discarded-qualifier compiler warings
- Fixed warnings for gcc14
- Added XOAUTH2 authentication
===========================================================================
- 05/03/2024
01. svctool: mount /etc/indimail/resolv.conf when UNSHARE is set
- 11/03/2024
02. installer.c: fixed displaying size variable, fixed allocation of zerobuf
    variable
- 29/04/2024
03. trynpbg1.c, tryspnam.c: Fix compiler warnings
- 30/04/2024
04. sys-checkpwd.c: display in logs if userpw, shadow is enabled for encrypted
    password lookup
05. test-indimail-mta: updated test script
06. svctool: fixed setting of mysqld options and variables
07. svctool: removed log-error and mysql-native-password
- 09/05/2024
08. fix discarded-qualifier compiler warnings
- 12/05/2024
09. fix function prototypes
10. qmail-smtpd.c, smtpd.c: added env variable PENALTY to make penalty for
    incorrect passwords configurable
- 13/05/2024
11. qmail-rm.c: added -f option to specify strptime format
12. qmail-smtpd.c: added HOSTACCESS to list of env variables used
- 21/05/2024
13. svctool: fix mysqldump incompatibility introduced by oracle
- 22/05/2024
14. svctool: fix checking for vadddomain path
15. svctool: fix db creation for MariaDB > v10.3
- 23/05/2024
16. do_match.c, getDowmainToken.c, qregex.c renamed wildmat_internal to wildmat
17. svctool: added --sysconfdir for indisrvr service creation
- 31/05/2024
18. indimail-mta.spec.in: remove glibc-static in buildrequires for mageia
- 16/06/2024
19. udplogger.c: BUG: fixed SIGFPE when n=0
- 27/06/2024