@@ -2,6 +2,8 @@
 Release @version@-@release@ Start 08/08/2024 End XX/XX/XXXX
 - 08/08/2024
 1. svctool: fixed mariadb db creation for mariadb 11.x on archlinux
+- 01/09/2024
+2. queue-fix.c: bug - tcpto buffer size was unitialized
 
 * Tue Aug 06 2024 12:51:02 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.8-1.1%{?dist}
 Release @version@-@release@ Start 05/02/2024 End XX/XX/XXXX
